# ChangeLog for sci-biology/embassy-domalign
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/embassy-domalign/ChangeLog,v 1.7 2006/11/02 00:55:02 ribosome Exp $

  02 Nov 2006; Olivier Fisette <ribosome@gentoo.org>
  embassy-domalign-0.1.0-r1.ebuild:
  Added to x86.

*embassy-domalign-0.1.0-r1 (21 Jul 2006)

  21 Jul 2006; Olivier Fisette <ribosome@gentoo.org>
  +embassy-domalign-0.1.0-r1.ebuild:
  New upstream version building against EMBOSS 4.0.0.

  20 Jul 2006; Olivier Fisette <ribosome@gentoo.org>
  embassy-domalign-0.1.0.ebuild:
  Fixed download URL (silent upstream repackaging).

  03 Oct 2005; Olivier Fisette <ribosome@gentoo.org>
  embassy-domalign-0.1.0.ebuild:
  Stable on ppc-macos (with j4rg0n's permission, bug #102420).

  02 Oct 2005; Michael Hanselmann <hansmi@gentoo.org>
  embassy-domalign-0.1.0.ebuild:
  Stable on ppc.

  21 Sep 2005; Olivier Fisette <ribosome@gentoo.org>
  embassy-domalign-0.1.0.ebuild:
  Added to x86.

*embassy-domalign-0.1.0 (07 Aug 2005)

  07 Aug 2005; Olivier Fisette <ribosome@gentoo.org> +metadata.xml,
  +embassy-domalign-0.1.0.ebuild:
  Initial import. Part of EMBASSY 3.0.0.
