@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/embassy-domalign/Attic/embassy-domalign-0.1.0-r1.ebuild,v 1.2 2006/11/02 00:55:02 ribosome Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/embassy-domalign/Attic/embassy-domalign-0.1.0-r1.ebuild,v 1.3 2006/11/03 07:21:02 grobian Exp $
 
 EBOV="4.0.0"
 
@@ -10,4 +10,4 @@ DESCRIPTION="Protein domain alignment add-on package for EMBOSS"
 SRC_URI="ftp://emboss.open-bio.org/pub/EMBOSS/EMBOSS-${EBOV}.tar.gz
 	mirror://gentoo/embassy-${EBOV}-${PN:8}-${PV}.tar.gz"
 
-KEYWORDS="~ppc ~ppc-macos x86"
+KEYWORDS="~ppc x86"
