@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/embassy-domsearch/Attic/embassy-domsearch-0.1.0-r1.ebuild,v 1.3 2006/11/03 03:05:55 je_fro Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/embassy-domsearch/Attic/embassy-domsearch-0.1.0-r1.ebuild,v 1.4 2006/11/03 07:22:22 grobian Exp $
 
 EBOV="4.0.0"
 
@@ -10,4 +10,4 @@ DESCRIPTION="Protein domain search add-on package for EMBOSS"
 SRC_URI="ftp://emboss.open-bio.org/pub/EMBOSS/EMBOSS-${EBOV}.tar.gz
 	mirror://gentoo/embassy-${EBOV}-${PN:8}-${PV}.tar.gz"
 
-KEYWORDS="~ppc ~ppc-macos ~sparc x86"
+KEYWORDS="~ppc ~sparc x86"
