@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/embassy-domsearch/Attic/embassy-domsearch-0.1.0.ebuild,v 1.5 2006/07/20 21:19:12 ribosome Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/embassy-domsearch/Attic/embassy-domsearch-0.1.0.ebuild,v 1.6 2006/11/03 07:22:22 grobian Exp $
 
 EBOV="3.0.0"
 
@@ -12,4 +12,4 @@ SRC_URI="ftp://emboss.open-bio.org/pub/EMBOSS/old/${EBOV}/EMBOSS-${EBOV}.tar.gz
 
 RESTRICT="mirror"
 
-KEYWORDS="ppc ppc-macos x86"
+KEYWORDS="ppc x86"
