@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/embassy-emnu/Attic/embassy-emnu-1.05-r3.ebuild,v 1.3 2006/11/03 03:11:38 je_fro Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/embassy-emnu/Attic/embassy-emnu-1.05-r3.ebuild,v 1.4 2006/11/03 07:23:31 grobian Exp $
 
 EBOV="4.0.0"
 
@@ -10,7 +10,7 @@ DESCRIPTION="EMBOSS Menu is Not UNIX - Simple menu of EMBOSS applications"
 SRC_URI="ftp://emboss.open-bio.org/pub/EMBOSS/EMBOSS-${EBOV}.tar.gz
 	mirror://gentoo/embassy-${EBOV}-${PN:8}-${PV}.tar.gz"
 
-KEYWORDS="~ppc ~ppc-macos ~sparc x86"
+KEYWORDS="~ppc ~sparc x86"
 
 RDEPEND="sys-libs/ncurses
 	${RDEPEND}"
