@@ -1,6 +1,10 @@
 # ChangeLog for sci-biology/embassy-domsearch
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/embassy-domsearch/ChangeLog,v 1.8 2006/11/03 03:05:55 je_fro Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/embassy-domsearch/ChangeLog,v 1.9 2006/11/03 07:22:22 grobian Exp $
+
+  03 Nov 2006; Fabian Groffen <grobian@gentoo.org>
+  embassy-domsearch-0.1.0.ebuild, embassy-domsearch-0.1.0-r1.ebuild:
+  Dropped ppc-macos, see you in prefix.
 
   03 Nov 2006; Jeff Gardner <je_fro@gentoo.org>
   embassy-domsearch-0.1.0-r1.ebuild:
