@@ -1,6 +1,10 @@
 # ChangeLog for sci-biology/embassy-emnu
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/embassy-emnu/ChangeLog,v 1.18 2006/11/03 03:11:38 je_fro Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/embassy-emnu/ChangeLog,v 1.19 2006/11/03 07:23:31 grobian Exp $
+
+  03 Nov 2006; Fabian Groffen <grobian@gentoo.org>
+  embassy-emnu-1.05-r2.ebuild, embassy-emnu-1.05-r3.ebuild:
+  Dropped ppc-macos, see you in prefix.
 
   03 Nov 2006; Jeff Gardner <je_fro@gentoo.org> embassy-emnu-1.05-r3.ebuild:
   Added ~sparc
