@@ -1,6 +1,10 @@
 # ChangeLog for sci-biology/embassy-domalign
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/embassy-domalign/ChangeLog,v 1.7 2006/11/02 00:55:02 ribosome Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/embassy-domalign/ChangeLog,v 1.8 2006/11/03 07:21:02 grobian Exp $
+
+  02 Nov 2006; Fabian Groffen <grobian@gentoo.org>
+  embassy-domalign-0.1.0.ebuild, embassy-domalign-0.1.0-r1.ebuild:
+  Dropped ppc-macos, see you in prefix.
 
   02 Nov 2006; Olivier Fisette <ribosome@gentoo.org>
   embassy-domalign-0.1.0-r1.ebuild:
